--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "compress": "uglifyjs dist/vtex-masterdata.js -o dist/vtex-masterdata.min.js -c -m --comments /^!!/",
     "lint": "eslint src --fix",
     "release": "npm run clear && npm run lint && npm run build && npm run compress",
-    "start": "npm-run-all --parallel watch:*"
+    "start": "./node_modules/.bin/rollup -c --watch"
   },
   "repository": "zeindelf/vtex-masterdata",
   "homepage": "https://github.com/zeindelf/vtex-masterdata",
@@ -22,8 +22,9 @@
     "homepage": "https://www.zeindelf.com"
   },
   "files": [
-    "src",
-    "dist"
+    "dist",
+    "doc",
+    "lib"
   ],
   "keywords": [
     "vtex",
