--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "vtex-masterdata",
-  "version": "1.0.0-beta.2",
+  "version": "1.0.0-beta.3",
   "description": "Helpers to manipulate data from Vtex Masterdata",
   "module": "es/index.js",
   "main": "src/index",
-  "browser": "dist/vtex-masterdata.js",
   "scripts": {
     "build:es": "cross-env BABEL_ENV=es babel lib --out-dir es",
     "build:cjs": "cross-env BABEL_ENV=cjs babel lib --out-dir src",
@@ -12,7 +11,7 @@
     "clean": "rimraf es/* src/* dist/* coverage/*",
     "lint": "eslint lib/**/*.{js,ts} --fix --color",
     "prepare": "npm run clean && npm run build",
-    "release": "npm run clean && npm run build"
+    "release": "npm run clean && npm run lint && npm run build"
   },
   "repository": "zeindelf/vtex-masterdata",
   "homepage": "https://github.com/zeindelf/vtex-masterdata",
@@ -24,8 +23,7 @@
   },
   "files": [
     "es",
-    "src",
-    "dist"
+    "src"
   ],
   "keywords": [
     "vtex",
@@ -47,7 +45,6 @@
     "development"
   ],
   "dependencies": {
-    "eslint-config-airbnb-base": "^14.0.0",
     "querystring": "^0.2.0"
   },
   "devDependencies": {
@@ -65,6 +62,7 @@
     "cross-env": "^5.2.0",
     "envvar": "^2.0.0",
     "eslint": "^6.7.0",
+    "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-promise": "^4.2.1",
     "husky": "^3.1.0",
